# raycaster

./: .gitignore  CMakeLists.txt  LICENSE  README.md  changelog.txt  compile&run.txt
include/: camera.h  shader.h
include/glad/: glad.h
src/: glad.c  main.cpp
src/shaders/: fShader.glsl  fShader2.glsl  vColumnShader.glsl  vMapPlayerShader.glsl  vMapShader.glsl
